got geolocation to sort of work, but center always snaps back to user location then jumps back to the marker...weird and buggy but at least it kind of works

--- a/app/components/rootStyle.css
+++ b/app/components/rootStyle.css
@@ -28,7 +28,7 @@ header {
   display: flex;
   align-items: center;
   height: 4rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
   background-color: black;
   color: whitesmoke;
   position: fixed;
@@ -45,7 +45,7 @@ header {
 }
 
 aside {
-  flex: 0.4;
+  flex: 0.45;
   display: flex;
   flex-direction: column;
   padding-top: 4rem;
@@ -56,7 +56,7 @@ aside {
 .panel {
   margin: 0 1rem 1rem;
   padding: 1rem;
-  border-radius: 2px;
+  border-radius: 0.5em;
   background-color: #efecea;
   color: #aaa;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
